# Voice-Agent

./: .dockerignore  .env  Dockerfile  livekit.toml  main.py  pyproject.toml
src/: .env.local  agent.py
src/livekit_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
